______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.182:

* XINS/Java Common Library:
  - Added a regression test for the PatternType.

* XINS/Java Client Framework:
  - Improved description of 'parameters' argument in class XINSServiceCaller,
    in the call(...) methods.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.181:

* XINS/Java Common Library:
  - Changed the EnumItem to the old constructor as the static Item are not
    initialized yet when the constructor is invoked.
    This bug has been in XINS since the version 0.180.

* Build and release process:
  - Put the correct license files in the release.
  - Downgraded the oro library to version 2.0.7 because of some
    incompatibilities with Perl5 regular expressions.

* Specification:
  - Removed the extends attribute for the types.
  - Renamed the code attribute in the result to errorcode.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.180:

* XINS/Java Server Framework:
  - Replaced some tabs that were in the generated function with 3 spaces.

* XINS/Java Common Library:
  - The EnumItem generated class now uses the static Item included in the
    class. The method equals() and hashcode don't need then to be overridden.

* XINS/Java Client Framework:
  - Removed files and methods related to the session ID.
  - Removed methods related to the success.

* Generated build file:
  - Improved the logdoc skeleton used for xins create-logdoc.

* Build and release process:
  - Renamed the depends directory to lib.
  - Moved all jar files in the lib directory.
  - Moved XINS javadoc to a newly created docs directory.
  - Added XINS guide in the release.
  - Added the examples in the release.
  - Added the HTML logdoc pages in the release.
  - Removed caller demo, moved to the new module xins-examples.
